[Batch/LinkedinProfileScraping] fix profile picture url encoding